--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
     <div id="app"></div>
     <!-- <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script> -->
-    <script src="/public/bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 </html>
