--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expensify</title>
     <link rel="icon" type="image/png" href="./images/favicon.png">
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./dist/styles.css">
 </head>
 <body>
     <div id="app"></div>
     <!-- <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script> -->
-    <script src="./bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
